# substrait-autograd

./: .gitignore  Cargo.toml  README.md  license.sh
.github/scripts/: report_fuzz_findings.sh
.github/workflows/: ci.yml  nightly-fuzz.yml
crates/ddx-ad/: Cargo.toml
crates/ddx-ad/src/: lib.rs
crates/ddx-core/: Cargo.toml  README.md
crates/ddx-core/src/: colref.rs  constructors.rs  ddx.rs  engine.rs  error.rs  lib.rs  rewrite.rs
crates/ddx-core/tests/: rewrite.rs  roundtrip.rs  rules.rs  simulation.rs
crates/ddx-datafusion/: Cargo.toml
crates/ddx-datafusion/src/: lib.rs
docs/: design-relational-ad.md  design.md
docs/spikes/: attention_ad_spike.py  attention_causal_mask_check.py  duckdb_reentrancy_r1b.py  duckdb_substrait_window_bug.py  relational_ad_spike.py  route_ad_spike.py  substrait_ad_marker_spike.py  substrait_limitation_repro.py
docs/spikes/sqlparser-spike/src/: main.rs
python/ddxdb/: README.md
spikes/: README.md  attention_causal_mask_check.py  duckdb_substrait_window_bug.py  relational_ad_spike.py  route_ad_spike.py  substrait_ad_marker_spike.py  substrait_limitation_repro.py
spikes/sqlparser-spike/: Cargo.toml
spikes/sqlparser-spike/src/: main.rs
tests/: README.md
