# ddx — portable autograd for composable databases.
#
# One engine-neutral differentiation core (`ddx-core`, v1 / M0) plus thin
# per-engine adapters. See docs/design.md §6 for the layout and the
# dependency policy: `ddx-core` depends on `sqlparser` only; the heavy
# per-engine dependencies (datafusion, duckdb) are quarantined in the
# adapter crates.
[workspace]
resolver = "2"
members = [
    "crates/ddx-core",
    "crates/ddx-ad",
    "crates/ddx-datafusion",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/xqlsystems/ddx"
authors = ["Alex Merose <al@merose.com>"]
rust-version = "1.75"

[workspace.dependencies]
# The single load-bearing dependency of the core. Pinned exactly (see the
# `sqlparser` version policy in docs/design.md §6): a bump is a breaking
# release of ddx-core. 0.62 is the version every M0 spike was verified
# against (spikes/sqlparser-spike, decision-log G1/G3).
sqlparser = { version = "=0.62.0", features = ["visitor"] }

# Internal crates, referenced by path within the workspace.
ddx-core = { path = "crates/ddx-core" }
ddx-ad = { path = "crates/ddx-ad" }
